# esp-swarm-attestation

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/sa_config/: sa_build_config.h  sa_shared_defs.h
components/sa_network/: sa_network.c
components/sa_network/include/: sa_network.h
components/sa_syscall/: CMakeLists.txt  sa_syscall_types.h  sa_syscalls.c  sa_syscalls.tbl  sa_wrappers.c
components/sa_syscall/include/: sa_syscall.h
keys/: k_auth.key
protected_app/components/hacl_star/: CMakeLists.txt  LICENSE.txt
protected_app/components/sa_algorithms/: CMakeLists.txt  sa_shared.c  sa_simple.c  sa_simple_plus.c
protected_app/components/sa_broadcast/: sa_broadcast.c
protected_app/components/sa_network/: CMakeLists.txt  sa_network.c
protected_app/components/sa_protected_comms/: CMakeLists.txt  sa_protected_comms.c
protected_app/main/: CMakeLists.txt  build_config.h  network.c  network.h  protected_main.c  protected_main.h
prover/: CMakeLists.txt  sdkconfig.defaults
prover/components/sa_config/: sa_build_config.h
prover/components/sa_syscall/: sa_syscalls.c  sa_syscalls.tbl  sa_wrappers.c
prover/user_app/: CMakeLists.txt
testing/: network_test.py
user_app/: CMakeLists.txt  partitions.csv
user_app/main/: CMakeLists.txt  comms.c  comms.h  user_code.c  user_code.h
verifier/: simple_plus_verifier_attest.py  simple_plus_verifier_collect.py  simple_verifier.py
verifiers/: reset_counters.py  simple_plus_verifier_attest.py  simple_plus_verifier_collect.py  simple_verifier.py
(+33 files in other folders)
